--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "rxjs": "~6.6.0",
+    "swiper": "^7.4.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
