--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@walletconnect/web3-provider": "^1.7.8",
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
+    "ether-converter": "^0.0.16",
     "ethers": "^5.6.9",
     "https-browserify": "^1.0.0",
     "https-proxy-agent": "^5.0.1",
