--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.55",
     "@types/webpack-env": "^1.17.0",
+    "angular-cli-ghpages": "^1.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
